# serger

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .serger.jsonc  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  EXCLUDE_PATTERN_BUG_REPORT.md  LICENSE  PROMPT_FOR_SINGLEFILE_FIXES.md  README.md  REJECTED.md  ROADMAP.md  pyproject.toml  pytest.ini  serger.code-workspace
.ai/plans/: 2025-11-12-get_logger-factory.md
.ai/rules/: base.md  build_requirements.mdc  code_quality.mdc  git_conventions.mdc  project_overview.mdc  project_structure.mdc  type_checking.mdc  workflow.mdc
.ai/workflows/: debug_tests.md
.claude/: CLAUDE.md  settings.json
.cursor/commands/: cf.md  example.md  plan.md
.cursor/rules/: AI_INSTRUCTIONS.md  CURSOR.md  code_quality.mdc  communication.mdc  git_conventions.mdc  project_overview.mdc  pytest_structure.mdc  type_checking.mdc  workflow.mdc
.github/workflows/: ci.yml  dependabot-automation.yml  pages.yml  publish.yml  publish_pypi.yml  release.yml  release_github.yml
current_plan/: 00_overview.md  01_rename_shim_mode_to_module_mode.md  02_add_shim_setting_types.md  03.5_resolve_clarifying_questions.md  03_add_module_actions_types.md  04_validate_module_actions_config.md  05_create_module_actions_parsing.md  06_add_validation_functions.md  07_add_action_application_functions.md  08_create_mode_to_actions_conversion.md  09_test_mode_to_actions.md  10_integrate_module_actions_into_stitch.md  11_add_scope_handling.md  12.5_fix_module_name_derivation_for_shims.md  12.6_fix_delete_action_matching_for_shims.md  12_add_affects_and_cleanup_handling.md  13_update_documentation.md  14.5_fix_integration_test_failures.md  14.6_fix_remaining_integration_test_failures.md  14.7_fix_header_update_issue.md  14.8_fix_delete_action_import_test.md  14_add_comprehensive_integration_tests.md  15_implement_source_path_feature.md  16.1_fix_remaining_source_path_issues.md  16.2_fix_detect_runtime_mode_for_standalone.md  16_fix_module_structure_for_source_path_transformations.md  START_HERE.md  coverage_validation.md  documentation_coverage_report.md  plan_module_actions_design.md  test_coverage_report_module_actions.md  verification_report_module_actions.md
dev/: generate_ai_rules.py  list-project.sh  make_script.py  setup_ruby_check.sh  sync_ai_guidance.py
docs/: Gemfile  README.md  _config.yml  api.md  cli-reference.md  configuration-reference.md  configuration.md  example_isolated_stitching.md  examples.md  getting-started.md  index.md
src/apathetic_logs/: __init__.py  logs.py
src/apathetic_schema/: __init__.py  schema.py
src/apathetic_schema_src/: __init__.py  schema.py
src/apathetic_utils/: __init__.py  ci.py  files.py  matching.py  paths.py  system.py  text.py  types.py
src/serger/: __init__.py  __main__.py  actions.py  apathetic_logs.py  build.py  cli.py  config.py  config_resolve.py  config_types.py  config_validate.py  constants.py  logs.py  main_config.py  make_script.py  meta.py  module_actions.py  selftest.py  stitch.py  types.py  (+5 more)
tests/: conftest.py
(+348 files in other folders)
